--- a/scss/molecules/_offscreen-sidebar.scss
+++ b/scss/molecules/_offscreen-sidebar.scss
@@ -1,8 +1,8 @@
 .menu-btn {
   position: absolute;
-  width: 1.5em;
-  height: 1.5em;
-  line-height: 1.4;
+  width: 1.7em;
+  height: 1.7em;
+  line-height: 1.65;
   top: 1rem;
   left: 1rem;
   text-align: center;
